--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/quicksand": "^5.0.17",
-    "@mui/material": "^5.15.14",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@tailwindcss/typography": "0.5.9",
     "@types/node": "^20.5.0",
